--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
         background-color: #39a6b2;
         display: flex;
         justify-content: space-between;
-        flex-wrap: wrap;
     }
     header h1 {
         font-weight: bold;
@@ -31,12 +30,16 @@ body {
             margin: 7px 0;
         }
         header nav ul li{
-            display: inline;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            list-style: none;
         }
         header nav ul li a {
             margin: 0 30px;
             font-weight: lighter;
-            font-size: 22px;
+            font-size: 1.55vw;
             
         }
         footer {
