--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,15 +48,17 @@ body {
             padding: 40px 35px;
         }
         footer h2 {
-            display: inline;
+            display: flex;
             color: #024e76;
             font-size: 30px;
-            margin: 0;
+            margin: 0; 
+            justify-content: space-between;
+            flex-wrap: wrap;
         }
         footer div {
-        float: right;
         line-height: 1.5;
         text-align: right;
+        
         }
         footer a {
             color: #024e76;
@@ -64,21 +66,31 @@ body {
           /* Hero style start */
           .hero {
               background-image: url("../image/hero-bg.jpg");
-              height: 600px;
               background-size: cover;
-              background-position: center;
-              position: relative;
+              display: flex;
+              justify-content: center;
+              flex-wrap: wrap;
+          }
+          .hero-cta{
+              width: 35%;
+              text-align: right ;
+              margin: 3.5%;
+          }
+
+          .hero-cta h2 {
+              font-style: italic;
+              font-size: 55px;
+              color: #fce138;
           }
 
           .hero-form{
-              border: 3px solid #024e76;
-              background-color: #fce138;
-              padding:  20px;
-              width: 500px;
-              color: #024e76;
-              position: absolute;
-              bottom: 120px;
-              right: 140px;
+            border: 3px solid #024e76;
+            background-color: #fce138;
+            padding:  20px;
+            color: #024e76;
+            width: 40%;
+            margin: 3.5%;
+            right: 140px;
           }
           .hero-form h3{
               font-size: 24px;
